--- a/dialer/Dockerfile
+++ b/dialer/Dockerfile
@@ -17,7 +17,11 @@ COPY .env config.json /opt/dialer/
 
 #FROM scratch
 FROM alpine:3.9 as prod_img
-RUN mkdir -p /opt/rest
+RUN apk update && apk add ca-certificates && apk add tzdata
+RUN mkdir -p /opt/rest/
+RUN mkdir -p /usr/share/asterisk/sounds/ru/t2s/
+RUN cp /usr/share/zoneinfo/Europe/Moscow /etc/localtime
+RUN echo "Europe/Moscow" >  /etc/timezone
 COPY --from=builder /opt/dialer/* /opt/dialer/
 WORKDIR /opt/dialer/
 ENTRYPOINT ["/opt/dialer/dialer"]
